@@ -48,8 +48,8 @@ configurations {
 }
 
 dependencies {
-  project(":solr:modules").childProjects.values().stream().map(project -> project.path).each { module ->
-    modules project(path: module, configuration: "packaging")
+  project(":solr:modules").childProjects.values().stream().map {project -> project.path}.each {
+    module -> modules project(path: module, configuration: "packaging")
   }
 
   crossDcManager project(path: ":solr:cross-dc-manager", configuration: "packaging")
@@ -93,7 +93,7 @@ distributions {
         include "README.txt"
       })
 
-      from ('static/lib', {
+      from('static/lib', {
         into 'lib'
       })
 
@@ -113,7 +113,7 @@ distributions {
         into "docker"
         filesMatching([
             "scripts/**",
-        ]) { copy ->
+        ]) {copy ->
           copy.setMode(0755)
         }
       })
@@ -123,7 +123,7 @@ distributions {
           "**/*.sh",
           "**/bin/solr",
           "**/bin/systemd/solr.service",
-      ]) { copy ->
+      ]) {copy ->
         copy.setMode(0755)
       }
 
@@ -142,8 +142,8 @@ distributions {
       from(configurations.crossDcManager, {
         into "cross-dc-manager"
         filesMatching([
-                "bin/*",
-        ]) { copy ->
+            "bin/*",
+        ]) {copy ->
           copy.setMode(0755)
         }
       })
@@ -215,11 +215,44 @@ artifacts {
   solrSlimTgz(slimDistTar)
 }
 
+tasks.register('runDev', JavaExec) {
+  group = 'application'
+  description = 'Starts Solr for local experimentation.  Does NOT use the bin/solr script.'
+  dependsOn 'devSlim'
+
+  workingDir = file("$slimDevDir/server")
+
+  // Intentionally not synchronizing the logic here with bin/solr; don't want the burden
+
+  doFirst {
+    println "To attach a debugger, at the CLI pass: --debug-jvm"
+    println "To pass JVM args, at the CLI pass: -PjvmArgs='--add-modules jdk.incubator.vector'"
+    println "To pass system properties, at the CLI pass: -Dsolr.port.listen=8983"
+  }
+
+  maxHeapSize = project.findProperty('maxHeapSize') ?: '1G'
+
+  jvmArgs = [] // don't use defaults from our build that assume this is a typical build task
+  jvmArgs((project.findProperty('jvmArgs') ?: '').split())
+
+  systemProperty 'solr.port.listen', '8983'
+  systemProperty 'solr.install.dir', file("$workingDir/..")
+  systemProperty 'solr.logs.dir', file("$workingDir/logs")
+  systemProperty 'solr.zookeeper.server.enabled', 'true' // SolrCloud; embedded ZK
+
+  // Propagate CLI system properties (override defaults above)
+  systemProperties += gradle.startParameter.systemPropertiesArgs
+
+  classpath = files("$workingDir/start.jar")
+
+  args((project.findProperty('args') ?: '--module=http').split())
+}
+
 task downloadBats(type: NpmTask) {
   group = 'Build Dependency Download'
   args = ["install", "https://github.com/bats-core/bats-core#v${libs.versions.bats.core.get()}",
-                     "https://github.com/bats-core/bats-assert#v${libs.versions.bats.assert.get()}",
-                     "https://github.com/bats-core/bats-file#v${libs.versions.bats.file.get()}",
+      "https://github.com/bats-core/bats-assert#v${libs.versions.bats.assert.get()}",
+      "https://github.com/bats-core/bats-file#v${libs.versions.bats.file.get()}",
   ]
 
   inputs.files("${project.ext.nodeProjectDir}/package.json")
@@ -236,7 +269,8 @@ task integrationTests(type: BatsTask) {
   def integrationTestOutput = "$buildDir/test-output"
   def solrHome = "$integrationTestOutput/solr-home"
   def solrTestFailuresDir = "$integrationTestOutput/failure-snapshots"
-  var solrPort = Integer.parseInt((String) project.findProperty('bats.port') ?: System.getProperty("bats.port", "-1"))
+  var solrPort = Integer
+      .parseInt((String) project.findProperty('bats.port') ?: System.getProperty("bats.port", "-1"))
   while (solrPort > 64000 || solrPort < 0) { // We need room for +1000 for ZK
     try (ServerSocket s = new ServerSocket(0)) {
       solrPort = s.getLocalPort()
@@ -256,13 +290,15 @@ task integrationTests(type: BatsTask) {
     mkdir solrTestFailuresDir
 
     // TODO - if quiet then don't tee
-    standardOutput = new TeeOutputStream(System.out, new FileOutputStream("$integrationTestOutput/test-output.txt"))
+    standardOutput = new TeeOutputStream(System.out,
+        new FileOutputStream("$integrationTestOutput/test-output.txt"))
     println("Running BATS tests with Solr base port ${solrPort}")
   }
 
   environment SOLR_TIP: distDir.toString()
   environment SOLR_HOME: solrHome
   environment SOLR_PID_DIR: solrHome
+  environment SOLR_PORT_LISTEN: solrPort
   environment SOLR_PORT: solrPort
   environment SOLR2_PORT: solrPort + 1
   environment SOLR3_PORT: solrPort + 2
@@ -284,7 +320,7 @@ class BatsTask extends Exec {
   @Option(option = "tests", description = "Sets test cases to be included")
   public void setTestNamePatterns(List<String> tests) {
     // TODO: bats --filter <regex>
-    tests.each { testFiles << "$testDir/$it" }
+    tests.each {testFiles << "$testDir/$it"}
   }
 
   @Override
@@ -294,8 +330,8 @@ class BatsTask extends Exec {
 
     // Note: tests to run must be listed after all other arguments
     // Additional debugging output: -x, --verbose-run
-    setArgs(['-T', '--print-output-on-failure', '--report-formatter', 'junit', '--output', "$project.buildDir/test-output"] + (testFiles.empty ? testDir : testFiles))
-
+    setArgs(['-T', '--print-output-on-failure', '--report-formatter', 'junit', '--output', "$project.buildDir/test-output"] +
+        (testFiles.empty ? testDir : testFiles))
 
     super.exec()
   }
